Corrigindo warnings que estavam quebrando a aplicação durante o deploy

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -2,7 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
+body {
+  background-image: url('./images/wallpapers/model.jpg');
+  background-size: cover;
+  background-position: center;
+}
 
 .constr-gif-wolf {
   animation: run linear 5s infinite;
@@ -59,6 +63,12 @@
 
 .swiper-slide-active {
   filter: blur(0);
+}
+
+.swiper-slide {
+  background-image: url('./images/wallpapers/001.jpg');
+  background-position: center;
+  background-size: cover;
 }
 
 .slider-swiper-div {
